@@ -1,3 +1,7 @@
+2001-05-09  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/testlet/java/util/Calendar/add.java: New file.
+
 2001-05-08  Tom Tromey  <tromey@redhat.com>
 
 	* gnu/testlet/java/text/DateFormatSymbols/Test.java: Added a new
